[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/HUD/HUD_Espacio.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/dogicapixelbold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[node name="HUD_Espacio" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 255.0
margin_bottom = 600.0
color = Color( 0.027451, 0.14902, 0.121569, 0.870588 )
__meta__ = {
"_editor_description_": ""
}

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -255.0
margin_bottom = 600.0
color = Color( 0.027451, 0.14902, 0.121569, 0.870588 )
__meta__ = {
"_editor_description_": ""
}

[node name="Control" type="Control" parent="."]
margin_right = 247.0
margin_bottom = 243.0
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 357.0

[node name="Comodin7" type="Label" parent="Control/VBoxContainer"]
margin_right = 252.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 10 )
text = "
------------------
"
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer7" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 46.0
margin_right = 252.0
margin_bottom = 58.0
alignment = 1

[node name="Player" type="Label" parent="Control/VBoxContainer/HBoxContainer7"]
margin_left = 66.0
margin_right = 186.0
margin_bottom = 12.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 2 )
text = "JUGADOR "
align = 1

[node name="Comodin" type="Label" parent="Control/VBoxContainer"]
margin_top = 62.0
margin_right = 252.0
margin_bottom = 89.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 10 )
text = "
"

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 93.0
margin_right = 252.0
margin_bottom = 105.0

[node name="LV" type="Label" parent="Control/VBoxContainer/HBoxContainer5"]
margin_right = 54.0
margin_bottom = 12.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 2 )
text = " LV: "

[node name="LV_numero" type="Label" parent="Control/VBoxContainer/HBoxContainer5"]
margin_left = 58.0
margin_right = 74.0
margin_bottom = 12.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="Comodin2" type="Label" parent="Control/VBoxContainer"]
margin_top = 109.0
margin_right = 252.0
margin_bottom = 123.0

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 127.0
margin_right = 252.0
margin_bottom = 139.0

[node name="CD" type="Label" parent="Control/VBoxContainer/HBoxContainer4"]
margin_right = 50.0
margin_bottom = 12.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 4 )
text = " CD:"

[node name="CD_numeros" type="Label" parent="Control/VBoxContainer/HBoxContainer4"]
margin_left = 54.0
margin_right = 70.0
margin_bottom = 12.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="Comodin3" type="Label" parent="Control/VBoxContainer"]
margin_top = 143.0
margin_right = 252.0
margin_bottom = 157.0

[node name="HBBestScore" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 161.0
margin_right = 252.0
margin_bottom = 173.0

[node name="LabelBestScore" type="Label" parent="Control/VBoxContainer/HBBestScore"]
margin_right = 168.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 8 )
text = " BEST SCORE:"
__meta__ = {
"_editor_description_": ""
}

[node name="bsScore_numero" type="Label" parent="Control/VBoxContainer/HBBestScore"]
margin_left = 172.0
margin_right = 188.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="Comodin4" type="Label" parent="Control/VBoxContainer"]
margin_top = 177.0
margin_right = 252.0
margin_bottom = 191.0

[node name="Comodin9" type="Label" parent="Control/VBoxContainer"]
margin_top = 195.0
margin_right = 252.0
margin_bottom = 222.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 10 )
text = "------------------
"
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer8" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 226.0
margin_right = 252.0
margin_bottom = 238.0
alignment = 1

[node name="Player" type="Label" parent="Control/VBoxContainer/HBoxContainer8"]
margin_left = 71.0
margin_right = 181.0
margin_bottom = 12.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 2 )
text = "PARTIDA"
align = 1

[node name="Comodin8" type="Label" parent="Control/VBoxContainer"]
margin_top = 242.0
margin_right = 252.0
margin_bottom = 256.0
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer6" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 260.0
margin_right = 252.0
margin_bottom = 272.0

[node name="Tiempo" type="Label" parent="Control/VBoxContainer/HBoxContainer6"]
margin_right = 118.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 6 )
text = " TIEMPO: "

[node name="Tiempo_numero" type="Label" parent="Control/VBoxContainer/HBoxContainer6"]
margin_left = 122.0
margin_right = 138.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 7 )
text = "0"

[node name="Comodin5" type="Label" parent="Control/VBoxContainer"]
margin_top = 276.0
margin_right = 252.0
margin_bottom = 290.0

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 294.0
margin_right = 252.0
margin_bottom = 306.0

[node name="LabelScore" type="Label" parent="Control/VBoxContainer/HBoxContainer3"]
margin_right = 96.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 8 )
text = " SCORE:"

[node name="Score_numero" type="Label" parent="Control/VBoxContainer/HBoxContainer3"]
margin_left = 100.0
margin_right = 116.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="Comodin6" type="Label" parent="Control/VBoxContainer"]
margin_top = 310.0
margin_right = 252.0
margin_bottom = 324.0

[node name="HBEnemyKills" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 328.0
margin_right = 252.0
margin_bottom = 340.0

[node name="LabelEnemyKills" type="Label" parent="Control/VBoxContainer/HBEnemyKills"]
margin_right = 174.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 8 )
text = " Enemy kills:"
__meta__ = {
"_editor_description_": ""
}

[node name="LabelEnemyKills_numero" type="Label" parent="Control/VBoxContainer/HBEnemyKills"]
margin_left = 178.0
margin_right = 194.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="Comodin10" type="Label" parent="Control/VBoxContainer"]
margin_top = 344.0
margin_right = 252.0
margin_bottom = 358.0

[node name="Comodin11" type="Label" parent="Control/VBoxContainer"]
margin_top = 362.0
margin_right = 252.0
margin_bottom = 389.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 10 )
text = "------------------
"
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer9" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 393.0
margin_right = 252.0
margin_bottom = 405.0
alignment = 1

[node name="Player" type="Label" parent="Control/VBoxContainer/HBoxContainer9"]
margin_left = 94.0
margin_right = 158.0
margin_bottom = 12.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 2 )
text = "NAVE"
align = 1

[node name="Comodin14" type="Label" parent="Control/VBoxContainer"]
margin_top = 409.0
margin_right = 252.0
margin_bottom = 423.0
__meta__ = {
"_editor_description_": ""
}

[node name="HBLaser" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 427.0
margin_right = 252.0
margin_bottom = 439.0

[node name="LabelLaser" type="Label" parent="Control/VBoxContainer/HBLaser"]
margin_right = 92.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 8 )
text = " Laser:"
__meta__ = {
"_editor_description_": ""
}

[node name="LabelLaser_numero" type="Label" parent="Control/VBoxContainer/HBLaser"]
margin_left = 96.0
margin_right = 112.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="Comodin12" type="Label" parent="Control/VBoxContainer"]
margin_top = 443.0
margin_right = 252.0
margin_bottom = 457.0

[node name="HBEscudo" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 461.0
margin_right = 252.0
margin_bottom = 473.0

[node name="LabelEscudo" type="Label" parent="Control/VBoxContainer/HBEscudo"]
margin_right = 128.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 8 )
text = " Escudos:"
__meta__ = {
"_editor_description_": ""
}

[node name="LabelEscudo_numero" type="Label" parent="Control/VBoxContainer/HBEscudo"]
margin_left = 132.0
margin_right = 148.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="Comodin13" type="Label" parent="Control/VBoxContainer"]
margin_top = 477.0
margin_right = 252.0
margin_bottom = 491.0

[node name="HBMotor" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 495.0
margin_right = 252.0
margin_bottom = 507.0

[node name="LabelMotor" type="Label" parent="Control/VBoxContainer/HBMotor"]
margin_right = 94.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 8 )
text = " Motor:"
__meta__ = {
"_editor_description_": ""
}

[node name="LabelMotor_numero" type="Label" parent="Control/VBoxContainer/HBMotor"]
margin_left = 98.0
margin_right = 114.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="Comodin15" type="Label" parent="Control/VBoxContainer"]
margin_top = 511.0
margin_right = 252.0
margin_bottom = 553.0
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 10 )
text = "
------------------
"
__meta__ = {
"_editor_description_": ""
}

[node name="Firma" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 557.0
margin_right = 252.0
margin_bottom = 569.0
alignment = 1

[node name="MBR" type="Label" parent="Control/VBoxContainer/Firma"]
margin_left = 101.0
margin_right = 151.0
margin_bottom = 12.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.0823529, 0.866667, 0.368627, 1 )
custom_fonts/font = SubResource( 2 )
text = "MBR"
align = 1
